--- a/index.html
+++ b/index.html
@@ -11,45 +11,71 @@
 </head>
 
 <body>
-<div class="container">
-    <div class="row justify-content-center">
-        <div class="col-6">
-            <h1 class="mt-5 text-center"> Todo List </h1>
-            <!--입력부분-->
-            <div class="input-group mb-3 mt-3">
-                <input type="text" class="form-control" id="todoInput" placeholder="오늘 할 일">
-                <button id="button">추 가</button>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-6">
+                <h1 class="mt-5 text-center"> Todo List </h1>
+                <!--입력부분-->
+                <div class="input-group mb-3 mt-3">
+                    <input type="text" class="form-control" id="todoInput" placeholder="오늘 할 일">
+                    <button class="btn btn-primary" id="addTodo">추 가</button>
+                </div>
+                <!--리스트-->
+                <u1 class="list-group" id="todoList">
+                    <li class="List-item">리스트</li>
+                </u1>
             </div>
-            <!--리스트-->
-            <u1 class="list-group" id="todoList">
-                <li class="List-item">밥먹기</li>
-            </u1>
-
-
-
-            </div>
-
         </div>
-
     </div>
-</div>
+
 
     <script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.js">
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" 
         crossorigin="anonymous">
     </script>
 
     <script>
-        const button = document.querySelector('#button');
-      
-        // Pass the button, the tooltip, and some options, and Popper will do the
-        // magic positioning for you:
-        Popper.createPopper(button, {
-          placement: 'right',
-        });
-      </script>
-</body>
+            document.addEventListener('DOMContentLoaded', function () {
+                loadTodos();
+            });
+            document.getElementById('addTodo').addEventListener('click', function () {
+                var value = document.getElementById('todoInput').value;
+                if (value) {
+                    addTodo(value);
+                    document.getElementById('todoInput').value = '';
+                    storeTodos();
+                }
+            })
 
+
+
+
+            function addTodo(text) {
+                var list = document.getElementById('todoList')
+                var item = document.createElement('li')
+                item.innerText = text
+                item.classList.add('list-group-item')
+                list.appendChild(item)
+            }
+            function storeTodos() {
+                var todos = []
+                var todoList = document.getElementById('todoList')
+                for (var i = 0; i < todoList.children.length; i++) {
+                    todos.push(todoList.children[i].innerText.trim())
+                }
+                console.log(todos)
+                localStorage.setItem('todos', JSON.stringify(todos))
+            }
+            function loadTodos() {
+                var todos = JSON.parse(localStorage.getItem('todos'))
+                if (todos) {
+                    todos.forEach(function (todo) {
+                        addTodo(todo)
+                    })
+                }
+            }
+        </script>
+</body>
 </html>
